--- a/JS-009/index.html
+++ b/JS-009/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>js 001</title>
+	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
+<h1>Teste JS - Alert();</h1>
 
 </body>
 </html>
