--- a/JS-010/index.html
+++ b/JS-010/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 001</title>
+	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
+<h1>Teste alert() com window.alert()</h1>
 
 </body>
 </html>
