--- a/JS-013/index.html
+++ b/JS-013/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 13</title>
+	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
-
+	<button onclick="data();"> CLICK - ME </button>
 </body>
 </html>
