--- a/JS-014/index.html
+++ b/JS-014/index.html
@@ -2,9 +2,12 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 14</title>
+	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
+
+<button onclick="somar();">Click Aqui</button>
 
 </body>
 </html>
