--- a/JS-015/index.html
+++ b/JS-015/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+	<script type="text/javascript" src="js.js"></script>
 	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 15</title>
 </head>
 <body>
-
+<button onclick="mostrar();">Click aqui!</button>
 </body>
 </html>
