Uso de operadores matemáticos com funções

--- a/JS-016/index.html
+++ b/JS-016/index.html
@@ -2,9 +2,28 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 16</title>
+	<script type="text/javascript" src="js.js"></script>
+	<style type="text/css">
+		ul{
+			margin: 10px;
+			
+		}
+		li{
+			margin: 10px;
+			list-style: none;
+		}
+	</style>
 </head>
 <body>
-
+<ul>
+	<li><button onclick="mais();">Somar</button></li>
+	<li><button onclick="div();">Dividir</button></li>
+	<li><button onclick="vezes();">Multiplicar</button></li>
+	<li><button onclick="menos();">Subtrair</button></li>
+	<li><button onclick="mod();">Modulo</button></li>
+	<li><button onclick="lacoFor();">for</button></li>
+	<li><button onclick="lacoWhile();">while</button></li>
+</ul>
 </body>
 </html>
