Uso de operadores de comparação

--- a/JS-017/index.html
+++ b/JS-017/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 17</title>
+	<script type="text/javascript" src="js.js"></script>
+	<style type="text/css">
+		ul{
+			margin: 10px;
+			
+		}
+		li{
+			margin: 10px;
+			list-style: none;
+		}
+	</style>
 </head>
 <body>
-
+<ul>
+	<li><button onclick="compMaior();">1 > 0</button></li>
+	<li><button onclick="compIgua();">1 == 1</button></li>
+	<li><button onclick="compDif();">3 != 1</button></li>
+</ul>
 </body>
 </html>
