--- a/JS-018/index.html
+++ b/JS-018/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 18</title>
+	<script type="text/javascript" src="js.js"></script>
+	<style type="text/css">
+		ul{
+			margin: 10px;
+			
+		}
+		li{
+			margin: 10px;
+			list-style: none;
+		}
+	</style>
 </head>
 <body>
-
+<ul>
+	<h3>x = 3</h3>
+	<h3>y = 3</h3>
+	<h3>t = 2</h3>
+	<h3>a = 1</h3>
+	<li><button onclick="logicosAND();">((x > y) && (y > a))</button></li>
+	<li><button onclick="logicosNt();">(!(x > y) && (y > a))</button></li>
+	<li><button onclick="logicosOR();">x == t || x == y</button></li>
+	<li><button onclick="logicosNot();"> (!(x == y))</button></li>
+</ul>
 </body>
 </html>
