Uso de operadores de atribuição JS

--- a/JS-019/index.html
+++ b/JS-019/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>js 001</title>
+	<title>JS 19</title>
+	<script type="text/javascript" src="js.js"></script>
+	<style type="text/css">
+		ul{
+			margin: 10px;
+			
+		}
+		li{
+			margin: 10px;
+			list-style: none;
+		}
+	</style>
 </head>
 <body>
-
+<ul>
+	
+	<h3>Operadores de Atribuição</h3>
+	<li><button onclick="a();"> ( a = 3 || b += a ) </button></li>
+</ul>
 </body>
 </html>
