--- a/JS-014/index.html
+++ b/JS-014/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>JS 14</title>
-	<script type="text/javascript" src="js.js"></script>
+<meta charset="utf-8"/>
+	<title>FOR EACH</title>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 
-<button onclick="somar();">Click Aqui</button>
+<button onclick="t()" >MAP 1</button>
+<button onclick="t1()">MAP 2</button>
+<button onclick="t2()">MAP 3</button>
+<button onclick="t3()">MAP 4</button>
+<button onclick="t4()">MAP 5</button>
+<button onclick="t5()">MAP 6</button>
 
 </body>
 </html>
